# Doc-book_hackathon

./: .env  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
backend/: .env  .gitignore  README.md  agent.py  api.py  main.py  pyproject.toml  requirements.txt  retrieve.py  start-server.bat  start-server.sh
code-examples/: audio_preprocessor.py  capstone_integrator.py  llm_task_planner.py
doc-book/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tailwind.config.js
doc-book/docs/: intro.md
doc-book/docs/module-1/: python-agents-rclpy.md  ros2-communication-backbone.md  urdf-humanoid-body.md
doc-book/docs/module-2/: chapter-1-gazebo-physics.md  chapter-2-unity-visualization.md  chapter-3-sensor-simulation.md  module-2.md
doc-book/docs/module-3/: chapter-1-photorealistic-intelligence.md  chapter-2-seeing-the-world.md  chapter-3-navigating-physical-world.md  module-3.md  plan.md
doc-book/docs/module-4/: chapter-1-voice-to-action.md  chapter-2-cognitive-planning.md  chapter-3-capstone-humanoid.md
doc-book/src/components/: ChatBubble.tsx  TranslationPersonalizationBar.tsx
doc-book/src/css/: custom.css
specs/001-embedding-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-retrieval-verification/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ai-agent-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-chat-ui-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+77 files in other folders)
