[project]
name = "humanoid-backend"
version = "0.1.0"
description = "RAG Backend for Humanoid Academy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere",
    "qdrant-client",
    "beautifulsoup4",
    "fastapi",
    "httpx",
    "openai",
    "python-dotenv",
    "tiktoken",
    "uvicorn",
]